// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerBackdrop only with required props renders successfully only with required props: AnimatedView with invisible. 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  statusBarTranslucent={true}
  transparent={true}
  visible={true}
/>
`;

exports[`PickerBackdrop only with required props renders successfully only with required props: AnimatedView with visible. 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  statusBarTranslucent={true}
  transparent={true}
  visible={true}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {},
        }
      }
      collapsable={false}
      entering={
        FadeIn {
          "build": [Function],
          "callbackV": [Function],
          "durationV": 300,
          "randomizeDelay": false,
        }
      }
      exiting={
        FadeOut {
          "build": [Function],
          "callbackV": [Function],
          "durationV": 150,
          "randomizeDelay": false,
        }
      }
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.4)",
          "flex": 1,
        }
      }
      testID="backdropAnimated"
    />
  </View>
</Modal>
`;

exports[`PickerBackdrop with all props should be applied properly: PickerBackdrop with all props. 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  presentationStyle="fullScreen"
  statusBarTranslucent={false}
  style={
    Object {
      "backgroundColor": "yellow",
    }
  }
  testID="modal"
  transparent={false}
  visible={true}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "bottom": 0,
        "display": "none",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="pressable"
  >
    <View
      animatedStyle={
        Object {
          "value": Object {},
        }
      }
      collapsable={false}
      entering={
        ZoomIn {
          "build": [Function],
          "callbackV": [Function],
          "durationV": 500,
          "randomizeDelay": false,
        }
      }
      exiting={
        ZoomOut {
          "build": [Function],
          "callbackV": [Function],
          "durationV": 300,
          "randomizeDelay": false,
        }
      }
      style={
        Object {
          "backgroundColor": "green",
          "borderColor": "red",
          "flex": 1,
        }
      }
      testID="animatedView"
    />
  </View>
</Modal>
`;
